--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "react2048",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ahmetkuslular.github.io/react-2048/",
   "dependencies": {
-    "enzyme-adapter-react-16": "^1.14.0",
-    "i": "^0.3.6",
-    "npm": "^6.10.3",
+    "gh-pages": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -17,7 +16,9 @@
     "build": "react-scripts build",
     "test": "NODE_PATH=src:src/components jest --env=jsdom",
     "eject": "react-scripts eject",
-    "format": "prettier \"src/**/*.{js,html}\" --write"
+    "format": "prettier \"src/**/*.{js,html}\" --write",
+    "predeploy": "NODE_PATH=src:src/components yarn build",
+    "deploy": "NODE_PATH=src:src/components gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +42,7 @@
     "babel-jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-to-json": "^3.4.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "24.7.1",
     "prettier": "1.18.2"
   },
